[tool.poetry]
name = "ynab-nag"
version = "0.1.0"
description = ""
authors = ["Anthony Panettiere <azezpz1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
